@@ -7,171 +7,280 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.persistence.EntityNotFoundException;
+import jakarta.validation.constraints.Null;
+import knu.kproject.dto.UserDto.UserDto;
 import knu.kproject.dto.project.InviteDto;
 import knu.kproject.dto.project.ProjectDto;
 import knu.kproject.dto.project.PutProjectDto;
 import knu.kproject.dto.workspace.WorkSpaceDto;
 import knu.kproject.entity.User;
-import knu.kproject.entity.Workspace;
 import knu.kproject.global.code.Api_Response;
 import knu.kproject.entity.Project;
 import knu.kproject.entity.ProjectUser;
+import knu.kproject.global.code.ErrorCode;
+import knu.kproject.global.code.SuccessCode;
 import knu.kproject.service.ProjectService;
 import knu.kproject.service.UserService;
+import knu.kproject.util.ApiResponseUtil;
+import lombok.AllArgsConstructor;
+import lombok.NoArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.authorization.method.AuthorizeReturnObject;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
+import org.webjars.NotFoundException;
 
+import java.util.HashMap;
 import java.util.List;
-import java.util.Optional;
+import java.util.Map;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
-@Tag(name = "workspace API", description = "workspace API 명세서 입니다.")
+@Tag(name = "Project API", description = "project API 명세서 입니다.")
 @RestController
 @RequestMapping("workspace")
+@RequiredArgsConstructor
 public class ProjectController {
-    @Autowired
-    private ProjectService projectService;
-    @Autowired
-    private UserService userService;
+    private final ProjectService projectService;
+    private final UserService userService;
 
     @Operation(summary = "project 생성", description = "프로젝트 생성 API 입니다.")
-    @ApiResponses(
-            value = {
-                    @ApiResponse(responseCode = "200", description = "success", content = @Content(mediaType = "application/json", schema = @Schema(type = "true"))),
-                    @ApiResponse(responseCode = "500", description = "fail", content = @Content(mediaType = "applicaion/json", schema = @Schema(type = "false")))
-            }
-    )
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "프로젝트 생성 성공"),
+            @ApiResponse(responseCode = "400", description = "잘못된 요청 오류"),
+            @ApiResponse(responseCode = "401", description = "Authorizeation 오류"),
+            @ApiResponse(responseCode = "500", description = "서버 오류")
+    })
     @PostMapping("")
-    public ResponseEntity<Api_Response<?>> createProject(@RequestBody PutProjectDto projectDto, @RequestParam Long workspaceId) {
+    public ResponseEntity<Api_Response<Object>> createProject(@RequestBody PutProjectDto projectDto, @AuthenticationPrincipal Long key) {
         try {
-            Project project = projectService.createProject(projectDto, workspaceId);
-            return ResponseEntity.ok().body(new Api_Response<>(true, 200, "SUCCESS"));
+            UUID projectId = projectService.createProject(projectDto, key);
+            Map<String, UUID> projectMap = new HashMap<>();
+            projectMap.put("projectId", projectId);
+            return ResponseEntity.ok().body(Api_Response.builder()
+                    .code(SuccessCode.INSERT_SUCCESS.getStatus())
+                    .message(SuccessCode.INSERT_SUCCESS.getMessage())
+                    .result(projectMap)
+                    .build());
+        } catch (IllegalArgumentException e) {
+            return ApiResponseUtil.createUnAuthorization();
+        } catch (EntityNotFoundException e) {
+            return ApiResponseUtil.createNotFoundResponse(
+                    ErrorCode.NOT_FOUND_ERROR.getMessage()
+            );
         } catch (RuntimeException e) {
-            return ResponseEntity.ok().body(new Api_Response<>(false, 500, "Fail"));
+            return ApiResponseUtil.createBadRequestResponse(
+                    ErrorCode.BAD_REQUEST_ERROR.getMessage()
+            );
         }
     }
     @Operation(summary = "모든 프로젝트 조회", description = "특정 workspace 아래 존재하는 모든 project 조회 API 입니다.")
-    @ApiResponses(
-            value = {
-                    @ApiResponse(responseCode = "200", description = "success", content = @Content(mediaType = "application/json", schema = @Schema(implementation = WorkSpaceDto.class))),
-                    @ApiResponse(responseCode = "201", description = "success", content = @Content(mediaType = "application/json", schema = @Schema(type = "empty"))),
-                    @ApiResponse(responseCode = "500", description = "fail", content = @Content(mediaType = "applicaion/json", schema = @Schema(type = "fail")))
-            }
-    )
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "모든 프로젝트 조회 성공"),
+            @ApiResponse(responseCode = "401", description = "Authorizeation 오류"),
+            @ApiResponse(responseCode = "500", description = "서버 오류")
+    })
     @GetMapping("")
-    public ResponseEntity<Api_Response<?>> getProjectsByWorkspaceId(@RequestParam Long workspaceId) {
-        List<ProjectDto> projects = projectService.getProjectByWorkspaceId(workspaceId);
+    public ResponseEntity<Api_Response<Object>> getProjectsByWorkspaceId(@AuthenticationPrincipal Long key) {
+        try {
+            List<ProjectDto> projects = projectService.getProjectByWorkspaceId(key);
 
-        if (projects.isEmpty()) {
-            return ResponseEntity.ok().body(new Api_Response<>("empty", 201, "SUCCESS"));
+            return ResponseEntity.ok().body(Api_Response.builder()
+                    .code(SuccessCode.SELECT_SUCCESS.getStatus())
+                    .message(SuccessCode.SELECT_SUCCESS.getMessage())
+                    .result(projects)
+                    .build());
+        } catch (IllegalArgumentException e) {
+            return ApiResponseUtil.createUnAuthorization();
+        } catch (EntityNotFoundException e){
+            return ApiResponseUtil.createNotFoundResponse(
+                    ErrorCode.NOT_FOUND_ERROR.getMessage()
+            );
+        } catch (RuntimeException e) {
+            return ApiResponseUtil.createErrorResponse(
+                    ErrorCode.SELECT_ERROR.getMessage(),
+                    ErrorCode.SELECT_ERROR.getStatus()
+            );
         }
-        return ResponseEntity.ok().body(new Api_Response<>(projects, 200, "SUCCESS"));
     }
     @Operation(summary = "특정 프로젝트 조회", description = "특정 project 조회 API 입니다.")
-    @ApiResponses(
-            value = {
-                    @ApiResponse(responseCode = "200", description = "success", content = @Content(mediaType = "application/json", schema = @Schema(implementation = ProjectDto.class))),
-                    @ApiResponse(responseCode = "500", description = "fail", content = @Content(mediaType = "applicaion/json", schema = @Schema(type = "false")))
-            }
-    )
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "특정 프로젝트 조회 성공"),
+            @ApiResponse(responseCode = "401", description = "Authorizeation 오류"),
+            @ApiResponse(responseCode = "404", description = "프로젝트가 존재하지 않음"),
+            @ApiResponse(responseCode = "500", description = "서버 오류")
+    })
     @GetMapping("/project")
-    public ResponseEntity<Api_Response<?>> getProjectById(@RequestParam Long projectId) {
+    public ResponseEntity<Api_Response<Object>> getProjectById(@AuthenticationPrincipal Long userToken , @RequestParam UUID key) {
         try {
-            ProjectDto project = projectService.getProjectById(projectId);
-            return ResponseEntity.ok().body(new Api_Response<>(project, 200, "SUCCESS"));
+            if (userToken == null) throw new IllegalArgumentException("Authorization error");
+            ProjectDto project = projectService.getProjectById(key);
+            return ResponseEntity.ok().body(Api_Response.builder()
+                    .code(SuccessCode.SELECT_SUCCESS.getStatus())
+                    .message(SuccessCode.SELECT_SUCCESS.getMessage())
+                    .result(project).build());
+        } catch (IllegalArgumentException e) {
+            return ApiResponseUtil.createUnAuthorization();
+        } catch (EntityNotFoundException e) {
+            return ApiResponseUtil.createNotFoundResponse(
+                    ErrorCode.NOT_FOUND_ERROR.getMessage()
+            );
         } catch (RuntimeException e) {
-            return ResponseEntity.ok().body(new Api_Response<>("error", 500, "SUCCESS"));
+            return ApiResponseUtil.createErrorResponse(
+                    ErrorCode.SELECT_ERROR.getMessage(),
+                    ErrorCode.SELECT_ERROR.getStatus()
+            );
         }
     }
+
     @Operation(summary = "특정 프로젝트 수정", description = "특정 project 수정 API 입니다.")
-    @ApiResponses(
-            value = {
-                    @ApiResponse(responseCode = "200", description = "success", content = @Content(mediaType = "application/json", schema = @Schema(type = "true"))),
-                    @ApiResponse(responseCode = "500", description = "fail", content = @Content(mediaType = "applicaion/json", schema = @Schema(type = "false")))
-            }
-    )
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "특정 프로젝트 수정 성공"),
+            @ApiResponse(responseCode = "401", description = "Authorizeation 오류"),
+            @ApiResponse(responseCode = "404", description = "프로젝트가 존재하지 않음"),
+            @ApiResponse(responseCode = "500", description = "서버 오류")
+    })
     @PutMapping("/project")
-    public ResponseEntity<Api_Response<?>> updateProject(@RequestParam Long projectId, @RequestBody PutProjectDto updateProjectData) {
+    public ResponseEntity<Api_Response<Object>> updateProject(@AuthenticationPrincipal Long userToken, @RequestParam UUID key, @RequestBody PutProjectDto updateProjectData) {
         try {
-            ProjectDto updatedProject = projectService.updateProject(projectId, updateProjectData);
-            Api_Response<?> response = new Api_Response<>(true, 200, "SUCCESS");
-            return ResponseEntity.ok().body(response);
+            if (userToken == null) throw new IllegalArgumentException("Authorization error");
+            projectService.updateProject(key, updateProjectData);
+            return ApiResponseUtil.createSuccessResponse(SuccessCode.UPDATE_SUCCESS.getMessage());
+        } catch (IllegalArgumentException e) {
+            return ApiResponseUtil.createUnAuthorization();
+        } catch (EntityNotFoundException e) {
+            return ApiResponseUtil.createNotFoundResponse(
+                    ErrorCode.NOT_FOUND_ERROR.getMessage()
+            );
         } catch (RuntimeException e) {
-            return ResponseEntity.ok().body(new Api_Response<>(false, 500, "Fail"));
+            return ApiResponseUtil.createErrorResponse(
+                    ErrorCode.UPDATE_ERROR.getMessage(),
+                    ErrorCode.UPDATE_ERROR.getStatus()
+            );
         }
     }
     @Operation(summary = "특정 프로젝트 삭제", description = "특정 project 삭제 API 입니다.")
-    @ApiResponses(
-            value = {
-                    @ApiResponse(responseCode = "200", description = "success", content = @Content(mediaType = "application/json", schema = @Schema(type = "true"))),
-                    @ApiResponse(responseCode = "500", description = "fail", content = @Content(mediaType = "applicaion/json", schema = @Schema(type = "false")))
-            }
-    )
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "특정 프로젝트 삭제 성공"),
+            @ApiResponse(responseCode = "401", description = "Authorizeation 오류"),
+            @ApiResponse(responseCode = "404", description = "프로젝트가 존재하지 않음"),
+            @ApiResponse(responseCode = "500", description = "서버 오류")
+    })
     @DeleteMapping("/project")
-    public ResponseEntity<Api_Response<?>> deleteProject(@RequestParam Long projectId) {
+    public ResponseEntity<Api_Response<Object>> deleteProject(@AuthenticationPrincipal Long token, @RequestParam UUID key) {
         try {
-            projectService.deleteProject(projectId);
-            return ResponseEntity.ok().body(new Api_Response<>(true, 200, "SUCCESS"));
+            if (token == null) throw new IllegalArgumentException("error");
+            projectService.deleteProject(token, key);
+            return ApiResponseUtil.createSuccessResponse(SuccessCode.DELETE_SUCCESS.getMessage());
+        } catch (IllegalArgumentException e) {
+            return ApiResponseUtil.createUnAuthorization();
+        } catch (EntityNotFoundException e) {
+            return ApiResponseUtil.createNotFoundResponse(
+                    ErrorCode.NOT_FOUND_ERROR.getMessage()
+            );
+        } catch (NullPointerException e) {
+            return ApiResponseUtil.createErrorResponse(
+                    ErrorCode.FORBIDDEN_ERROR.getMessage(),
+                    ErrorCode.FORBIDDEN_ERROR.getStatus()
+            );
         } catch (RuntimeException e) {
-            return ResponseEntity.ok().body(new Api_Response<>(false, 500, "Fail"));
+            return ApiResponseUtil.createErrorResponse(
+                    ErrorCode.DELETE_ERROR.getMessage(),
+                    ErrorCode.DELETE_ERROR.getStatus()
+            );
         }
     }
     @Operation(summary = "특정 프로젝트의 팀원 추가", description = "특정 project의 팀원 추가 API 입니다.")
-    @ApiResponses(
-            value = {
-                    @ApiResponse(responseCode = "200", description = "success", content = @Content(mediaType = "application/json", schema = @Schema(type = "String"))),
-                    @ApiResponse(responseCode = "201", description = "can't", content = @Content(mediaType = "application/json", schema = @Schema(type = "String"))),
-                    @ApiResponse(responseCode = "500", description = "fail", content = @Content(mediaType = "applicaion/json", schema = @Schema(type = "String")))
-            }
-    )
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "프로젝트 팀원 추가 성공"),
+            @ApiResponse(responseCode = "401", description = "Authorizeation 오류"),
+            @ApiResponse(responseCode = "404", description = "프로젝트가 존재하지 않음"),
+            @ApiResponse(responseCode = "500", description = "서버 오류")
+    })
     @PostMapping("/project")
-    public ResponseEntity<Api_Response<?>> addUser(@RequestBody InviteDto inviteDto) {
-        String response = projectService.addUser(inviteDto);
-        if ( response.equals("success") ){
-            return ResponseEntity.ok().body(new Api_Response<>(response, 200, "SUCCESS"));
-        } else if (response.equals("exist user")) {
-            return ResponseEntity.ok().body(new Api_Response<>(response, 201, "Can't"));
-        } else {
-            return ResponseEntity.ok().body(new Api_Response<>(null, 500, "Fail"));
+    public ResponseEntity<Api_Response<Object>> addUser(@AuthenticationPrincipal Long token, @RequestBody InviteDto inviteDto) {
+        try {
+            if (token == null) throw new IllegalArgumentException("error");
+            projectService.addUser(token, inviteDto);
+            return ApiResponseUtil.createSuccessResponse(SuccessCode.INSERT_SUCCESS.getMessage());
+        } catch (IllegalArgumentException e) {
+            return ApiResponseUtil.createUnAuthorization();
+        } catch (EntityNotFoundException e) {
+            return ApiResponseUtil.createNotFoundResponse(ErrorCode.NOT_FOUND_ERROR.getMessage());
+        } catch (NullPointerException e) {
+            return ApiResponseUtil.createErrorResponse(
+                    ErrorCode.FORBIDDEN_ERROR.getMessage(),
+                    ErrorCode.FORBIDDEN_ERROR.getStatus()
+            );
+        } catch (RuntimeException e) {
+            return ApiResponseUtil.createErrorResponse(
+                    ErrorCode.INSERT_ERROR.getMessage(),
+                    ErrorCode.INSERT_ERROR.getStatus());
         }
     }
     @Operation(summary = "특정 프로젝트의 팀원 조회", description = "특정 project의 팀원 조회 API 입니다.")
-    @ApiResponses(
-            value = {
-                    @ApiResponse(responseCode = "200", description = "success", content = @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = User.class)))),
-                    @ApiResponse(responseCode = "500", description = "fail", content = @Content(mediaType = "applicaion/json", schema = @Schema(type = "String")))
-            }
-    )
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "프로젝트 팀원 조회 성공"),
+            @ApiResponse(responseCode = "401", description = "Authorizeation 오류"),
+            @ApiResponse(responseCode = "404", description = "프로젝트가 존재하지 않음"),
+            @ApiResponse(responseCode = "500", description = "서버 오류")
+    })
     @GetMapping("project/users")
-    public ResponseEntity<Api_Response<?>> getProjectToUser(@RequestParam Long projectId) {
-        List<ProjectUser> projectUsers = projectService.findByAllProjectUsers(projectId);
-        List<Long> usersId = projectUsers.stream()
-                .map(ProjectUser::getUserId)
-                .sorted()
-                .toList();
-        List<User> users = usersId.stream()
-                .map(userId -> userService.findById(userId))
-                .collect(Collectors.toList());
-        Api_Response<?> response = new Api_Response<>(users, 200, "SUCCESS");
-        return ResponseEntity.ok(response);
+    public ResponseEntity<Api_Response<Object>> getProjectToUser(@AuthenticationPrincipal Long token, @RequestParam UUID key) {
+        try {
+            if (token == null) throw new IllegalArgumentException("error");
+            List<ProjectUser> projectUsers = projectService.findByAllProjectUsers(key);
+            List<Long> usersId = projectUsers.stream()
+                    .map(ProjectUser::getUserId)
+                    .sorted()
+                    .toList();
+            List<UserDto> users = usersId.stream()
+                    .map(userService::getUserInfo)
+                    .toList();
+            return ResponseEntity.ok().body(Api_Response.builder()
+                    .code(200).message("SUCCESS").result(users).build());
+        } catch (IllegalArgumentException e) {
+            return ApiResponseUtil.createUnAuthorization();
+        } catch (EntityNotFoundException e) {
+            return ApiResponseUtil.createNotFoundResponse(
+                    ErrorCode.NOT_FOUND_ERROR.getMessage()
+            );
+        } catch (RuntimeException e) {
+            return ApiResponseUtil.createErrorResponse(
+                    ErrorCode.SELECT_ERROR.getMessage(),
+                    ErrorCode.SELECT_ERROR.getStatus()
+            );
+        }
+
     }
     @Operation(summary = "특정 프로젝트의 팀원 삭제", description = "특정 project의 팀원 삭제 API 입니다.")
-    @ApiResponses(
-            value = {
-                    @ApiResponse(responseCode = "200", description = "success", content = @Content(mediaType = "application/json", schema = @Schema(type = "true"))),
-                    @ApiResponse(responseCode = "500", description = "fail", content = @Content(mediaType = "applicaion/json", schema = @Schema(type = "false")))
-            }
-    )
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "프로젝트 팀원 삭제 성공"),
+            @ApiResponse(responseCode = "401", description = "Authorizeation 오류"),
+            @ApiResponse(responseCode = "403", description = "권한 오류"),
+            @ApiResponse(responseCode = "404", description = "프로젝트가 존재하지 않음"),
+            @ApiResponse(responseCode = "500", description = "서버 오류")
+    })
     @DeleteMapping("/project/user")
-    public ResponseEntity<Api_Response<Boolean>> deleteProjectUser(@RequestParam Long projectId, @RequestParam String userName) {
+    public ResponseEntity<Api_Response<Object>> deleteProjectUser(@AuthenticationPrincipal Long token, @RequestBody InviteDto inviteDto) {
         try {
-            projectService.deleteProjectUser(projectId, userName);
-            Api_Response<Boolean> response = new Api_Response<>(true, 200, "SUCCESS");
-            return ResponseEntity.ok(response);
+            if (token == null) throw new IllegalArgumentException("error");
+            projectService.deleteProjectUser(token, inviteDto.getProjectId(), inviteDto.getUserEmails());
+            return ApiResponseUtil.createSuccessResponse(SuccessCode.DELETE_SUCCESS.getMessage());
+        } catch (IllegalArgumentException e) {
+            return ApiResponseUtil.createUnAuthorization();
+        } catch (EntityNotFoundException e) {
+            return ApiResponseUtil.createNotFoundResponse(ErrorCode.NOT_FOUND_ERROR.getMessage());
+        } catch (NullPointerException e) {
+            return ApiResponseUtil.createErrorResponse(
+                    ErrorCode.FORBIDDEN_ERROR.getMessage(),
+                    ErrorCode.FORBIDDEN_ERROR.getStatus()
+            );
         } catch (RuntimeException e) {
-            Api_Response<Boolean> response = new Api_Response<>(false, 500, "Fail");
-            return ResponseEntity.ok(response);
+            return ApiResponseUtil.createErrorResponse(ErrorCode.DELETE_ERROR.getMessage(), ErrorCode.DELETE_ERROR.getStatus());
         }
     }
 }
